--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1"
+		"phpspec/phpspec": "~2.1",
+		"hybridauth/hybridauth": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
-			"database"
+			"database",
+			 "app/Helpers"
 		],
 		"psr-4": {
 			"App\\": "app/"
